# ros2_ws

./: .gitignore
src/apriltag_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/apriltag_ros/apriltag_ros/: detector.py
src/apriltag_ros/cfg/: tags_36h11.yaml
src/apriltag_ros/config/: tags.yaml
src/apriltag_ros/launch/: camera_36h11.launch.py  detection.launch.py
src/apriltag_ros/src/: AprilTagNode.cpp  conversion.cpp  pose_estimation.cpp  pose_estimation.hpp
src/usb_cam/: CMakeLists.txt  package.xml
src/usb_cam/include/usb_cam/: webcam_driver.hpp
src/usb_cam/launch/: usb_cam.launch.py
src/usb_cam/src/: webcam_driver.cpp  webcam_driver_main.cpp  webcam_driverv2.cpp
