<?xml version="1.0"?>
<package format="3">
  <name>usb_cam</name>
  <version>0.0.0</version>
  <description>USB camera driver for ROS2</description>
  <maintainer email="seu@email.com">Seu Nome</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>OpenCV</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>